--- a/MusiCodeWebApp/MusiCodeWebApp.csproj
+++ b/MusiCodeWebApp/MusiCodeWebApp.csproj
@@ -104,6 +104,8 @@
     <Content Include="Areas\ManagerPanel\Assets\Images\MusicodeLogo.png" />
     <Content Include="Assets\Css\HomePage.css" />
     <Content Include="Assets\Css\Login.css" />
+    <Content Include="Assets\Css\ProductDetails.css" />
+    <Content Include="Assets\Css\ProductList.css" />
     <Content Include="Assets\PageImages\MusicodeLogo.png" />
     <Content Include="Assets\PageImages\user.png" />
     <Content Include="Assets\PageImages\violin-bow-white-background.jpg" />
@@ -122,11 +124,13 @@
     <Compile Include="Areas\ManagerPanel\ManagerPanelAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Brand.cs" />
+    <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Manager.cs" />
@@ -159,6 +163,9 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Register.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\AllProducts.cshtml" />
+    <Content Include="Views\Product\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
